Refactor TransactionCommandExecutor